# libappimage

./: Cargo.toml  README.md  build.rs
examples/: appimage_example.c
include/: appimage.h
src/: appimage.rs  appimage_handler.rs  config.rs  elf.rs  error.rs  ffi.rs  format.rs  lib.rs  payload.rs  payload_iterator.rs  payload_types.rs  progress.rs  streambuf.rs  traversal.rs
src/desktop_integration/: constants.rs  desktop_entry.rs  editor.rs  integrator.rs  manager.rs  mod.rs  thumbnailer.rs
src/handlers/: mod.rs  type1.rs  type2.rs
src/legacy/: mod.rs
src/squashfs_tools/: action.rs  action_eval.rs  action_impl.rs  alloc.rs  atomic_swap.rs  caches_queues_lists.rs  compat.rs  compressor.rs  date.rs  endian.rs  fnmatch.rs  fragments.rs  fs.rs  gzip.rs  help.rs  info.rs  limit.rs  lz4.rs  lzma.rs  lzma_xz.rs  lzo.rs  memory.rs  merge_sort.rs  mksquashfs.rs  mod.rs  pager.rs  processors.rs  progress.rs  pseudo.rs  read.rs  read_queue.rs  reader.rs  restore.rs  seq_queue.rs  signals.rs  sort.rs  swap.rs  symbolic_mode.rs  tar.rs  thread.rs  (+10 more)
src/utils/: byteswap.rs  digest.rs  dl_handle.rs  elf_file.rs  hashlib.rs  icon_handle.rs  icon_handle_backend.rs  light_elf.rs  logger.rs  logging.rs  magic_bytes_checker.rs  md5.rs  mod.rs  path_utils.rs  payload_entries_cache.rs  resource_extractor.rs  resources_extractor.rs  string_sanitizer.rs  temporary_directory.rs  xdg.rs  (+1 more)
tests/: libappimage_tests.rs  main.rs  test_appimage.rs  test_elf.rs  test_icon_handle.rs  test_logger.rs  test_magic_bytes_checker.rs  test_payload_entries_cache.rs  test_resources_extractor.rs
(+2 files in other folders)
