[package]
name = "libappimage"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A static library for AppImage handling"
license = "MIT"
build = "build.rs"

[features]
default = ["desktop-integration", "thumbnailer", "trace"]
desktop-integration = []
thumbnailer = []
use_atomic_exchange = []
trace = []

[lib]
name = "appimage"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
rand = "0.8"
libc = "0.2"
backhand = "0.21.0"
log = "0.4"
tempfile = "3.8"
md5 = "0.7"
home = "0.5.9"
dirs = "5.0"
squashfs = "0.1.0"
signal-hook = "0.3"
regex = "1.10"
nix = "0.26"
byteorder = "1.4"
flate2 = "1.1.0"
endian = "0.1.3"
atty = "0.2"
term_size = "0.3"
num_cpus = "1.16"
lzma-sys = "0.1"
zstd = "0.13"
base64 = "0.21"
xattr = "1.0"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.69"
cc = "1.0"

[dev-dependencies]
tempfile = "3.8"
test-case = "3.3"
